// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fusuma-loader should add fusuma options 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    {
      /* note
      This is Note!
      */
    }
    {
      /* classes: class! */
    }
    {
      /* sectionTitle: sectionTitle! */
    }
    {
      /* background: red */
    }
    {
      /* background: https://test.com */
    }
    <h1>{\`Hello\`}</h1>
    {
      /* content */
    }
    {
      /* screen */
    }
    <div className=\\"fusuma-screen\\"><div>This view can capture the screen.<br />Click to get started.;)<br /><br />Note: This feature runs only in Presenter Mode.</div><video id=\\"fusuma-screen-1\\" /></div>
    
            </>
          )];
        export const fusumaProps = [{note: 'This is Note!',classes: 'class!',sectionTitle: 'sectionTitle!',backgroundColor: 'red',backgroundImage: 'https://test.com',screen: 'true'}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    {
      /* note
      This is Note!
      */
    }
    {
      /* classes: class! */
    }
    {
      /* sectionTitle: sectionTitle! */
    }
    {
      /* background: red */
    }
    {
      /* background: https://test.com */
    }
    <h1>{\`Hello\`}</h1>
    {
      /* content */
    }
    {
      /* screen */
    }

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should convert MathJax 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    <h1>{\`MathJax\`}</h1>
    <div {...{
      \\"className\\": \\"math\\"
    }}><span parentName=\\"div\\" {...{
        \\"className\\": \\"katex-display\\"
      }}><span parentName=\\"span\\" {...{
          \\"className\\": \\"katex\\"
        }}><span parentName=\\"span\\" {...{
            \\"className\\": \\"katex-mathml\\"
          }}><math parentName=\\"span\\"><semantics parentName=\\"math\\"><mrow parentName=\\"semantics\\"><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`a\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup><mo parentName=\\"mrow\\">{\`+\`}</mo><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`b\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup><mo parentName=\\"mrow\\">{\`=\`}</mo><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`c\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup></mrow><annotation parentName=\\"semantics\\" {...{
                  \\"encoding\\": \\"application/x-tex\\"
                }}>{\`a^2 + b^2 = c^2\`}</annotation></semantics></math></span><span parentName=\\"span\\" {...{
            \\"className\\": \\"katex-html\\",
            \\"aria-hidden\\": \\"true\\"
          }}><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.9474379999999999em\\",
                  \\"verticalAlign\\": \\"-0.08333em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`a\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2222222222222222em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mbin\\"
              }}>{\`+\`}</span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2222222222222222em\\"
                }
              }}></span></span><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.8641079999999999em\\",
                  \\"verticalAlign\\": \\"0em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`b\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2777777777777778em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mrel\\"
              }}>{\`=\`}</span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2777777777777778em\\"
                }
              }}></span></span><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.8641079999999999em\\",
                  \\"verticalAlign\\": \\"0em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`c\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span></span></span></span></span></div>
    
            </>
          )];
        export const fusumaProps = [{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`MathJax\`}</h1>
    <div {...{
      \\"className\\": \\"math\\"
    }}><span parentName=\\"div\\" {...{
        \\"className\\": \\"katex-display\\"
      }}><span parentName=\\"span\\" {...{
          \\"className\\": \\"katex\\"
        }}><span parentName=\\"span\\" {...{
            \\"className\\": \\"katex-mathml\\"
          }}><math parentName=\\"span\\"><semantics parentName=\\"math\\"><mrow parentName=\\"semantics\\"><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`a\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup><mo parentName=\\"mrow\\">{\`+\`}</mo><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`b\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup><mo parentName=\\"mrow\\">{\`=\`}</mo><msup parentName=\\"mrow\\"><mi parentName=\\"msup\\">{\`c\`}</mi><mn parentName=\\"msup\\">{\`2\`}</mn></msup></mrow><annotation parentName=\\"semantics\\" {...{
                  \\"encoding\\": \\"application/x-tex\\"
                }}>{\`a^2 + b^2 = c^2\`}</annotation></semantics></math></span><span parentName=\\"span\\" {...{
            \\"className\\": \\"katex-html\\",
            \\"aria-hidden\\": \\"true\\"
          }}><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.9474379999999999em\\",
                  \\"verticalAlign\\": \\"-0.08333em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`a\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2222222222222222em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mbin\\"
              }}>{\`+\`}</span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2222222222222222em\\"
                }
              }}></span></span><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.8641079999999999em\\",
                  \\"verticalAlign\\": \\"0em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`b\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2777777777777778em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mrel\\"
              }}>{\`=\`}</span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mspace\\",
                \\"style\\": {
                  \\"marginRight\\": \\"0.2777777777777778em\\"
                }
              }}></span></span><span parentName=\\"span\\" {...{
              \\"className\\": \\"base\\"
            }}><span parentName=\\"span\\" {...{
                \\"className\\": \\"strut\\",
                \\"style\\": {
                  \\"height\\": \\"0.8641079999999999em\\",
                  \\"verticalAlign\\": \\"0em\\"
                }
              }}></span><span parentName=\\"span\\" {...{
                \\"className\\": \\"mord\\"
              }}><span parentName=\\"span\\" {...{
                  \\"className\\": \\"mord mathdefault\\"
                }}>{\`c\`}</span><span parentName=\\"span\\" {...{
                  \\"className\\": \\"msupsub\\"
                }}><span parentName=\\"span\\" {...{
                    \\"className\\": \\"vlist-t\\"
                  }}><span parentName=\\"span\\" {...{
                      \\"className\\": \\"vlist-r\\"
                    }}><span parentName=\\"span\\" {...{
                        \\"className\\": \\"vlist\\",
                        \\"style\\": {
                          \\"height\\": \\"0.8641079999999999em\\"
                        }
                      }}><span parentName=\\"span\\" {...{
                          \\"style\\": {
                            \\"top\\": \\"-3.113em\\",
                            \\"marginRight\\": \\"0.05em\\"
                          }
                        }}><span parentName=\\"span\\" {...{
                            \\"className\\": \\"pstrut\\",
                            \\"style\\": {
                              \\"height\\": \\"2.7em\\"
                            }
                          }}></span><span parentName=\\"span\\" {...{
                            \\"className\\": \\"sizing reset-size6 size3 mtight\\"
                          }}><span parentName=\\"span\\" {...{
                              \\"className\\": \\"mord mtight\\"
                            }}>{\`2\`}</span></span></span></span></span></span></span></span></span></span></span></span></div>

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should convert class to className 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    <h1>{\`Class\`}</h1>
    <div className=\\"test\\">
  <div className=\\"test2\\">
    <h2 className=\\"test3\\">hello</h2>
  </div>
    </div>
    
            </>
          )];
        export const fusumaProps = [{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`Class\`}</h1>
    <div className=\\"test\\">
  <div className=\\"test2\\">
    <h2 className=\\"test3\\">hello</h2>
  </div>
    </div>

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should convert emoji 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    <h1>{\`😄\`}</h1>
    
            </>
          ),

          (props) => (
            <>
              
    <h1>{\`😄\`}</h1>
    
            </>
          )];
        export const fusumaProps = [{},
{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`😄\`}</h1>
    <hr></hr>
    <h1>{\`😄\`}</h1>

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should convert mermaid 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    <h1>{\`FlowChart\`}</h1>
    
            </>
          ),

          (props) => (
            <>
              
    <pre><code parentName=\\"pre\\" {...{
        \\"className\\": \\"language-flow\\"
      }}>{\`graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
\`}</code></pre>
    
            </>
          )];
        export const fusumaProps = [{},
{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`FlowChart\`}</h1>
    <hr></hr>
    <pre><code parentName=\\"pre\\" {...{
        \\"className\\": \\"language-flow\\"
      }}>{\`graph TD;
    A-->B;
    A-->C;
    B-->D;
    C-->D;
\`}</code></pre>

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should return normal md 1`] = `
"/* @jsx mdx */


        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              
    <h1>{\`1\`}</h1>
    
            </>
          ),

          (props) => (
            <>
              
    <h1>{\`2\`}</h1>
    
            </>
          )];
        export const fusumaProps = [{},
{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};

const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">
    <h1>{\`1\`}</h1>
    <hr></hr>
    <h1>{\`2\`}</h1>

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;

exports[`fusuma-loader should return normal mdx 1`] = `
"/* @jsx mdx */
import React from 'react';

        import React from 'react';
        import { mdx } from '@mdx-js/react';
        export const slides = [
          (props) => (
            <>
              

    <p>{\`const Sample = () => \`}<div>{\`sample\`}</div>{\`;\`}</p>
    <Sample mdxType=\\"Sample\\" />
    
            </>
          )];
        export const fusumaProps = [{}];
const makeShortcode = name => function MDXDefaultShortcode(props) {
  console.warn(\\"Component \\" + name + \\" was not imported, exported, or provided by MDXProvider as global scope\\")
  return <div {...props}/>
};
const Sample = makeShortcode(\\"Sample\\");
const layoutProps = {
  slides
};
const MDXLayout = \\"wrapper\\"
export default function MDXContent({
  components,
  ...props
}) {
  return <MDXLayout {...layoutProps} {...props} components={components} mdxType=\\"MDXLayout\\">

    <p>{\`const Sample = () => \`}<div>{\`sample\`}</div>{\`;\`}</p>
    <Sample mdxType=\\"Sample\\" />

    </MDXLayout>;
}

MDXContent.isMDXComponent = true;"
`;
